assets/css/main.css
/* ... */
@media screen and (min-width: 1920px) {
    #header {
		background-size: 100% auto;
	}
}

@media (max-width: 500px) {
	.container {
		width: 92%;
		min-width: 100px;
	}

	#search .wrap {
		width: 90%;
	}

	#search.show .wrap {
		left: 5%;
	}

	#search .wrap .search_box {
		width: 100%;
	}

	#search .wrap .content {
		width: 100%;
	}

	#header {
		height: 240px;
		background-size: auto 240px;
	}

	body.menu #header {
		background-size: auto 240px;
		background-position: 50% 0;
	}

	#header .title {
		top: 80px;
		font-size: 20px;
	}

	#header .title .quote {
		font-size: 16px;
	}

	#header .title .quote .by {
		font-size: 13px;
	}

	#author .avatar img {
		width: 120px;
	}

	#content .article figure {
		margin: 0;
	}
}

